<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Inventory Lupin</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Produk">Produk</string>
    <string name="jumlah_stok">Jumlah Stok</string>
    <string name="whole">Whole</string>
    <string name="splt">Split</string>
    <string name="flake">Flake</string>
    <string name="laporan">Laporan</string>
    <string name="stock">Stock</string>
    <string name="profl">Profl</string>
    <string name="home">Home</string>
    <string name="pesan">Pesan</string>
    <string name="kartu_stok">Kartu Stok</string>
    <string name="antrian_barang">Antrian Barang</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="barang_masuk">Barang Masuk</string>
    <string name="barang_keluar">Barang Keluar</string>
    <string name="laporan_waktu">Laporan Waktu</string>
    <string name="laporan_pengiriman" tools:ignore="ExtraTranslation">Laporan Pengiriman</string>
    <string name="split_lupin">Split Lupin</string>
    <string name="whole_lupin">Whole Lupin</string>
    <string name="flake_lupin">Flake Lupin</string>
    <string name="bagian">Bagian</string>
    <string name="jabatan">Jabatan</string>
    <string name="no_hp">000000000000</string>
    <string name="laporan_rekap">Laporan Rekap Mitra</string>
    <string name="judul_event">Judul_event</string>
    <string name="entri">Entri</string>
    <string name="gudang">Gudang</string>
    <string name="profile">Profile</string>
    <string name="mitra">Mitra</string>
    <string name="kacang_lupin">Kacang Lupin</string>
    <string name="laporan_stok">Laporan Stok</string>
    <string name="f_permintaan">Form Permintaan</string>
    <string name="sj">Surat Jalan</string>
    <string name="entri_barang">Entri Barang</string>
    <string name="split_flake">Split dan Flake</string>
    <string name="entri_olah">Entri Olah</string>
    <string name="barang_whole">Barang Whole</string>
    <string name="entri_barang_whole">Entri Barang Whole</string>
    <string name="jumlah">jumlah</string>
    <string name="kirim" tools:ignore="ExtraTranslation">Kirim</string>
    <string name="deskripsi_whole">Dekripsi : Produk hasil petik dari para petani tanpa mengalami proses apapun. Produk ini biasa digunakan sebagai bahan baku pembuatan tahu.</string>
    <string name="deskripsi_split">Deskripsi:Produk ini sudah dikupas dan dibelah. Produk ini biasa digunakan sebagai bahan baku pembuatan tempe, tahu, susu, dll. Cocok sebagai bahan baku produk bernutrisi tinggi</string>
    <string name="deskripsi_flake">Deskripsi : Produk ini sudah dikupas dan dipecah menjadi serpihan kecil (menyerupai oatmeal). Produk ini memiliki kegunaan yang sangat bervarian sebagai bahan baku makanan, seperti bubur dll.</string>
    <string name="daerah">Daerah : </string>
    <string name="pic">PIC : </string>
    <string name="person_in_charge">Person in Charge</string>
    <string name="no_telp">No.Telp :</string>
    <string name="no_telp1">088888888</string>
    <string name="alamat">Alamat :</string>
    <string name="nama_daerah">Nama Daerah</string>
    <string name="alamat1">Alamat</string>
    <string name="nomorTelepon">Nomor Telepon</string>
    <string name="simpan">Simpan</string>
    <string name="id_daerah">Id mitra</string>
    <string name="ubah">Ubah</string>
    <string name="id_mitra">Id Mitra:</string>
    <string name="nama_whole_lupin">Nama : Whole Lupin</string>
    <string name="nomor_permintaan">Nomor Permintaan</string>
    <string name="split">Split</string>
    <string name="karung" tools:ignore="ExtraTranslation">Karung</string>
    <string name="tanggal_permintaan">Tanggal Permintaan</string>
    <string name="tujuan" tools:ignore="ExtraTranslation">Tujuan</string>
    <string name="nomor_sj">Nomor Surat Jalan</string>
    <string name="tanggal_keluar">Tanggal Keluar</string>
    <string name="tgl_olah">Tanggal Olah</string>
    <string name="kuantitas">Kuantitas</string>
    <string name="no_po">Nomor PO</string>
    <string name="tgl_masuk">Tanggal Masuk</string>
    <string name="id_pengolahan">Id Pengolahan</string>
    <string name="id_penerimaan">Id Penerimaan</string>
    <string name="pt_puri_lupin_indonusa">PT Puri Lupin Indonusa</string>
    <string name="alamat_lupin">Ruko Taman Borobudur Jalan Rorojongrang Blok B No. 5 <br>Bencongan Kelapa Dua, Tangerang</br></string>
    <string name="periode">Periode :</string>
    <string name="tgl">xxxx-xx-xx</string>
    <string name="cari">Cari</string>
    <string name="cetak">Cetak</string>
    <string name="tanggal">Tanggal</string>
    <string name="id">Id</string>
    <string name="id_laporan_sj">Id Laporan SJ</string>
    <string name="id_permintaan">Id Permintaan</string>
    <string name="whole_awal">Whole Awal</string>
    <string name="split_awal">Split Awal</string>
    <string name="flake_awal">Flake Awal</string>
    <string name="tampil_permintaan">Tampil Permintaan</string>
    <string name="notifikasi">notifikasi</string>
    <string name="laporan_barang">Laporan Rekap \nPermintaan Barang</string>


    <string-array name="tujuanmitra">
        <item>Salatiga</item>
        <item>Yogyakarta</item>
        <item>Jakarta</item>
    </string-array>

    <string-array name="bulan">
        <item>Bulan</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>

    </string-array>
    <string-array name="T">
        <item>Tahun</item>
    </string-array>
</resources>
