<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_antrian"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    tools:targetApi="o">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_kacang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/kacang_lupin"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_jumlah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/jumlah"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_tujuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/tujuan"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_kirim_brg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/buttonshape"
            android:text="@string/kirim"
            android:textColor="#fff" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
