<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:targetApi="o">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textColor="#000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/javatext"
                android:text="@string/daerah"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_daerah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/javatext"
                android:text="daerah"
                android:textColor="#000"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textColor="#000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/javatext"
                android:text="@string/pic"
                android:textSize="15sp" />

            <TextView
                android:textColor="#000"
                android:id="@+id/tv_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/javatext"
                android:text="@string/person_in_charge"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textColor="#000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/javatext"
                android:text="@string/no_telp"
                android:textSize="15sp" />

            <TextView
                android:textColor="#000"
                android:id="@+id/tv_telp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/javatext"
                android:text="@string/no_telp1"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textColor="#000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/javatext"
                android:text="@string/alamat"
                android:textSize="15sp" />

            <TextView
                android:textColor="#000"
                android:id="@+id/tv_alamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/javatext"
                android:text="alamat"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>