<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EntrySplitFlake">

    <include layout="@layout/actionbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:targetApi="o">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_no_po"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/no_po"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_kuantitas_whole"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/kuantitas"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/javatext"
                android:text="@string/karung"
                android:textSize="20sp" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_tgl_masuk"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/tgl_masuk"
                android:inputType="date" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_simpan_whole"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:text="@string/simpan"
            android:textColor="#fff" />
    </LinearLayout>

</LinearLayout>