<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Mitra.EntryMitra">

    <include layout="@layout/actionbar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:targetApi="o">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_id_mitra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id_daerah"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_nm_daerah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama_daerah"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_pic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/person_in_charge"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ProgressBar
                android:id="@+id/pb_mitra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_noTelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nomorTelepon"
                android:inputType="phone" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/alamat1"
                android:inputType="textMultiLine"
                android:lines="6"
                android:maxLines="6"
                android:minLines="4" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_simpan_mitra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:text="@string/simpan"
            android:textColor="#fff" />

    </LinearLayout>


</LinearLayout>