<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:targetApi="o">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/javatext"
                android:padding="5dp"
                android:text="@string/split" />

            <TextView
                android:id="@+id/tv_qty_split"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/javatext"
                android:padding="5dp"
                android:text="0"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/javatext"
                android:padding="5dp"
                android:text="@string/flake" />

            <TextView
                android:id="@+id/tv_qty_flake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/javatext"
                android:padding="5dp"
                android:text="0"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/javatext"
                android:padding="5dp"
                android:text="@string/karung" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/javatext"
                android:padding="5dp"
                android:text="@string/tujuan" />

            <TextView
                android:id="@+id/tv_tujuan_antrian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/javatext"
                android:padding="5dp"
                android:text="@string/tujuan"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_kirim_antrian"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/buttonshape"
                android:text="@string/kirim"
                android:textColor="#fff"
                android:textSize="13sp" />


        </LinearLayout>
        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="id"
            />
    </android.support.v7.widget.CardView>

</LinearLayout>